# mpd2k-gui

./: .gitignore  .prettierrc  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  error.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/load/: mod.rs
src-tauri/src/meta/: mod.rs  traits.rs  types.rs
src-tauri/src/playback/: mod.rs
src-tauri/src/router/: mod.rs  playback.rs  root.rs
src-tauri/src/state/: mod.rs
src/bindings/: taurpc.ts
src/lib/: ipc.ts  state.svelte.ts
src/lib/components/shared/AppTopbar/: AppTopbar.svelte  index.ts
src/lib/components/shared/NowPlayingBar/: NowPlayingBar.svelte  index.ts
src/lib/components/shared/SearchCommand/: SearchCommand.svelte
src/lib/components/shared/ThemeSwitcher/: ThemeSwitcher.svelte
src/lib/creates/: keybind.ts
src/lib/state/: appStore.svelte.ts  clientView.svelte.ts  index.ts  playback.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/client/: +page.svelte
src/routes/client/AlbumCollapse/: AlbumCollapse.svelte
src/routes/client/PanelList/: PanelList.svelte  index.ts
