[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
chrono = "0.4.38"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [] }
taurpc = "0.2.6"
specta = { version = "=2.0.0-rc.9", features = ["export"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.61"
walkdir = "2.5.0"
toml = "0.8.14"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
rand = "0.8.5"
murmur3 = "0.5.2"
csv = "1.3.0"
audiotags = { git = "https://github.com/mnpqraven/audiotags", features = ["raw-date"] }
rodio = "0.18.1"
strum = { version = "0.26.2", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
